# Games101_Assignment

./: README.md
Homework1/Rasterizer/: CMakeLists.txt  main.cpp  rasterizer.hpp
Homework2/Rasterizer/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp
Homework3/Rasterizer/: CMakeLists.txt  global.hpp  main.cpp  rasterizer.cpp
Homework4/BezierCurve/: CMakeLists.txt  main.cpp
Homework5/RayTracing/: CMakeLists.txt  Renderer.cpp  Triangle.hpp  main.cpp
Homework6/Raytracing/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  OBJ_Loader.hpp  Renderer.cpp  Triangle.hpp
